<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirectPage"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="30dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/login"
        android:padding="20dp"
        android:contentDescription="@string/todo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:layout_weight="@android:dimen/app_icon_size"
        android:background="@drawable/button_rounded"
        android:text="@string/institute"
        android:textColor="#000000"
        android:textSize="25sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:layout_weight="@android:dimen/app_icon_size"
        android:background="@drawable/button_rounded"
        android:onClick="btn_signUp_Form"
        android:text="@string/teacher"
        android:textColor="#000000"
        android:textSize="25sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:layout_weight="@android:dimen/app_icon_size"
        android:background="@drawable/button_rounded"
        android:text="@string/student"
        android:textColor="#000000"
        android:textSize="25sp" />



</LinearLayout>