<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Login_Form">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/login"
        android:padding="20dp"
        android:contentDescription="@string/todo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:ems="10"
            android:inputType="text"
            android:textSize="22sp"
            android:textColor="@color/cardview_dark_background"
            android:layout_marginTop="5dp"
            android:autofillHints="no"/>
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent"
        app:passwordToggleEnabled="true"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="22sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:background="@drawable/button_rounded"
        android:layout_weight="@android:dimen/app_icon_size"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/register"
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:background="@drawable/button_rounded"
        android:layout_weight="@android:dimen/app_icon_size"
        android:onClick="btn_directPage"
        />

</LinearLayout>